--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!-- header -->
+    <!-- header starts-->
     <div class="header">
       <div class="logo">
         <img id ="logoimg" src="./resources/images/logo.jpg">
@@ -22,6 +22,95 @@
         </ul>
       </div>
     </div>
+    <!--header ends, main starts-->
 
+    <div class="main">
+      <!--large starts-->
+      <div class="large">
+        <div class="mainimg">
+          <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+        </div>
+        <div>
+          <p>
+            MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc
+            condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices
+            egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
+            pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci
+            nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
+            vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam
+            tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet
+            lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed
+            ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a
+            hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+          </p>
+        </div>
+        <div>
+          <h3>Orca Spends Vacation at Land World Puget</h3>
+          <p>
+            PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
+             purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+             pulvinar ante accumsan...
+          </p>
+        </div>
+        <div class="fall">
+          <h2>Earth Spins Backwards for 2017</h2>
+        </div>
+        <div>
+          <h3>Burger for Breakfast: How Early is too Early?</h3>
+          <p>
+            Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in
+            faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum
+            enim. Praesent eu nisl erat.
+          </p>
+        </div>
+        <div class="hipster">
+          <h2>Research Shows Cameras Erase Memory</h2>
+        </div>
+      </div>
+      <!--large finishes, medium starts-->
+
+      <div class="medium">
+        <div>
+          <h3>FBI Finds Action Star Guilty of False Advertising</h3>
+          <p>
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam
+            sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis
+            eros tincidunt sed. Morbi venenatis condimentum sem, vitae
+            sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur
+            mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra
+            urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue
+             ut ante sollicitudin interdum. Pellentesque cursus dolor at
+             tincidunt cursus. Vestibulum blandit aliquam felis...
+          </p>
+        </div>
+        <div class="cat">
+          <h2>Cats in Control-Is It a Thing?</h2>
+        </div>
+        <div>
+          <p>
+            BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate,
+             ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur
+              neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin
+              lobortis, dui est sodales sapien, a vestibulum velit diam eget felis.
+              Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+          </p>
+        </div>
+      </div>
+
+      <div class="small">
+        <div>
+          <img src="./resources/images/cookie.png">
+        </div>
+        <div>
+          <h4>NEWS BITES</h4>
+        </p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising
+        Ideas Advertising Internet Online Illustration in Marketing Materials
+        Finally a Top Secret Way You Can
+        </p>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
