--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="mainimg">
           <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
         </div>
-        <div>
+        <div class="monument">
           <p>
             MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing
             elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc
@@ -45,7 +45,7 @@
             hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
           </p>
         </div>
-        <div>
+        <div class="orca">
           <h3>Orca Spends Vacation at Land World Puget</h3>
           <p>
             PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
@@ -53,16 +53,17 @@
              pulvinar ante accumsan...
           </p>
         </div>
-        <div class="fall">
-          <h2>Earth Spins Backwards for 2017</h2>
-        </div>
-        <div>
+
+        <div class="burger">
           <h3>Burger for Breakfast: How Early is too Early?</h3>
           <p>
             Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in
             faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum
             enim. Praesent eu nisl erat.
           </p>
+        </div>
+        <div class="fall">
+          <h2>Earth Spins Backwards for 2017</h2>
         </div>
         <div class="hipster">
           <h2>Research Shows Cameras Erase Memory</h2>
@@ -71,7 +72,7 @@
       <!--large finishes, medium starts-->
 
       <div class="medium">
-        <div>
+        <div class "fbi">
           <h3>FBI Finds Action Star Guilty of False Advertising</h3>
           <p>
             WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam
@@ -87,7 +88,7 @@
         <div class="cat">
           <h2>Cats in Control-Is It a Thing?</h2>
         </div>
-        <div>
+        <div class = "brooklyn">
           <p>
             BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate,
              ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur
@@ -99,18 +100,24 @@
       </div>
 
       <div class="small">
-        <div>
           <img src="./resources/images/cookie.png">
-        </div>
-        <div>
           <h4>NEWS BITES</h4>
-        </p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising
-        Ideas Advertising Internet Online Illustration in Marketing Materials
-        Finally a Top Secret Way You Can
-        </p>
-        </div>
+        <span>Cat Emoji Goes Viral</span>
+        <span>Buy Youtube Views</span>
+        <span>Home Business Advertising Ideas</span>
+        <span>Advertising Internet Online</span>
+        <span>Illustration in Marketing Materials</span>
+        <span>Finally a Top Secret Way You Can</span>
       </div>
 
+    </div>
+    <div class="footer">
+      <span id="footerlogo">My Times |</span>
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+      <span id="copyright">© 2016, My Times (A Division of Codecademy bite)</span>
     </div>
   </body>
 </html>
